--- a/Sport/AdminWindow.xaml
+++ b/Sport/AdminWindow.xaml
@@ -7,6 +7,20 @@
         mc:Ignorable="d"
         Title="AdminWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="8*"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+   
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Padding="10" Background="#0ce85c" Foreground="White">Список товаров</TextBlock>
+        <DataGrid Grid.Row="1" Grid.ColumnSpan="2" x:Name="dataGrid"></DataGrid>
         
+        <Button Grid.Row="2" Grid.Column="0" x:Name="BackBtn" Click="BackBtn_Click">Назад</Button>
+        <Button Grid.Row="2" Grid.Column="1" x:Name="AddBtn" Click="AddBtn_Click">Добавиить товар</Button>
     </Grid>
 </Window>
